# lotr-api-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: attribute.rs  client.rs  error.rs  filter.rs  item.rs  lib.rs  main.rs  requests.rs  sort.rs
src/item/: attribute.rs  mod.rs  object.rs
src/request/: attributes.rs  filter.rs  mod.rs  pagination.rs  sort.rs  tmp
tests/: basic_call.rs  deserialize.rs
