[package]
name = "lotr-api-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
description = "Rust wrapper for the one API to rule them all."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Yag000/lotr-api-rs"
repository = "https://github.com/Yag000/lotr-api-rs"
documentation = "https://github.com/Yag000/wallshift"
keywords = ["lotr", "lotr-api", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
