[package]
name = "lotr-api"
version = "0.1.0"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
description = "Rust wrapper for the one API to rule them all."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Yag000/lotr-api-rs"
repository = "https://github.com/Yag000/lotr-api-rs"
documentation = "https://docs.rs/lotr_api"
keywords = ["lotr", "lotr-api", "wrapper"]

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
