[package]
name = "lotr-api"
version = "0.1.2"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
description = "Rust wrapper for the one API to rule them all."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Yag000/lotr-api-rs"
repository = "https://github.com/Yag000/lotr-api-rs"
documentation = "https://docs.rs/lotr_api"
keywords = ["lotr", "lotr-api", "wrapper"]

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
